# Dataverse-API

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.xml  entity_create.ipynb  mypy.ini  pylint.rc  pyproject.toml  test.txt  tox.ini
.github/workflows/: codecov.yml  release.yml  ruff.yml  test_types.yml
dataverse/: _api.py  dataverse.py  entity.py  errors.py  schema.py
dataverse/metadata/: attributes.py  base.py  complex_properties.py  entity.py  enums.py  helpers.py  relationships.py
dataverse/utils/: batching.py  data.py  dataframes.py  labels.py  text.py
dataverse_api/: __init__.py  _api.py  _metadata_defs.py  dataclasses.py  dataverse.py  entity.py  errors.py  schema.py  tds.py  utils.py
dataverse_api/metadata/: attributes.py  base.py  complex_properties.py  entity.py  enums.py  helpers.py  relationships.py
dataverse_api/utils/: batching.py  data.py  labels.py  text.py
tests/: conftest.py  test_dataverse.py  test_dataverse_client.py  test_entity.py  test_errors.py  test_schema.py  test_utils.py
tests/metadata/: conftest.py  test_attributes.py  test_base.py  test_complex_properties.py  test_entity.py  test_enums.py  test_relationships.py
tests/sample_data/: test_entity_attributes.json  test_entity_attributes_bad.json  test_entity_init.txt  test_entity_init_bad.txt  test_entity_key.json  test_entity_keys.json  test_entity_keys_bad.json  test_entity_set.json  test_picklist_choices.txt  test_schema.txt
tests/utils/: test_batching.py  test_labels.py  test_text.py
