[project]
name = "dataverse-api"
version = "1.2.4"
description = "Abstraction layer for interacting with Microsoft Dataverse Web API using Python."
authors = [{ name = "Marcus Risanger", email = "69350948+MarcusRisanger@users.noreply.github.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "msal>=1.26.0,<2",
    "msal-requests-auth>=0.9.1",
    "pandas>=2.0.1,<3",
    "pydantic>=2.5.3,<3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.26.0,<7",
    "python-dotenv>=1.0.0,<2",
    "requests-mock>=1.11.0,<2",
    "responses>=0.24.1,<0.25",
    "types-requests>=2.31.0.10,<3",
    "pytest-xdist>=3.5.0,<4",
    "pandas-stubs>=2.1.4.231218,<3",
    "tabulate>=0.9.0,<0.10",
    "mypy>=1.15.0",
    "pytest>=7.4.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
lint.ignore-init-module-imports = true
